# meng_gongchang

./: .env.example  .gitignore  1  11.txt  CLAUDE.md  README.md  article_links.txt  check_files.py  chinagp_spider.py  docker-compose.yml  get_article_links.py  index.html  main.py  package-lock.json  package.json  pyproject.toml  rag-architecture.drawio  rescrape_missing.py  scrape_articles.py  tailwind.config.js  test_mineru.py  test_pipeline.py  tsconfig.json  vite.config.ts  使用指南.md
backend/: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/scripts/: backfill_document_tasks.py  download_model.py  import_es.py  init_es.py  list_bucket.py
backend/src/: config.py  indexer.py  key_manager.py  llm.py  main.py  query_expansion.py  query_intent.py  reranker.py  search.py  worker.py  ws_manager.py
backend/test/: test_embedding_compat.py  test_mineru_keys.py
docs/: pdf-proxy-vs-direct.md
frontend/: README.md  package-lock.json  package.json  skills-lock.json  vite.config.ts
frontend/src/: style.css
scripts/: check_status.py  import_es.py  import_milvus.py  init_milvus.py  run_chunker.py  scan_submit.py
src/: App.vue  auth.py  chunker.py  config.py  db.py  llm_answer.py  main.py  main.ts  mineru_client.py  minio_client.py  models.py  query_intent.py  redis_client.py  schemas.py  search.py  style.css  worker.py
src/api/: auth.ts  chat.ts  document.ts  index.ts  knowledge.ts  user.ts
src/composables/: useAuth.ts  useSSE.ts  (+1 more)
test/: test_llm_answer.py  test_mineru.py  test_pipeline.py  test_query_intent.py  test_siliconflow_rerank.py
(+59 files in other folders)
