[project]
name = "mineru-pipeline"
version = "0.1.0"
description = "MinerU Pipeline Phase 1 - Document ingestion and parsing engine"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "minio>=7.2.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "PyMuPDF>=1.24.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
pipeline-api = "src.main:app"
pipeline-worker = "src.worker:run_worker"
